public/less/frontend/components/top-bar-v1.less
/********** Topbar **********/
.top-bar-v1 {

    .navbar > .container {
        @media screen and (min-width: 660px) {
            padding-left: 0!important;
            padding-right: 0!important;
        }
    }

    .navbar .nav{
        font-weight: inherit;
    }

    .navbar .nav > li.hour-block,
    .navbar .nav > li.phone-block {
        width: 100%;

        @media screen and (min-width: 660px) {
            width: auto;
        }

    }

    ul.navbar-nav .navbar-text > a > div,
    ul.navbar-nav .navbar-text .ssb-edit-wrap {
        display: inline-block;
        vertical-align: middle;
    }

    .hour-block .navbar-text.navbar-right, .phone-block .navbar-text.navbar-right{
        .fa-lg{
            margin-top: 1px;
        }
    }

    .social-list-icons {
        margin-left: -20px;
        clear: both;
        width: 100%;
        overflow: auto;
        max-width:50%;

        @media screen and (min-width: 690px) {
            margin-left: 0;
            clear: none;
            width: auto;
            overflow: inherit;
        }

        @media only screen and (max-width: 767px) {
            max-width: 100%;
            ul[ng-sortable]{
                padding: 0;
                padding-top: 10px;
            }
        }

    }

    .left-block {
        padding: 0;
        margin: 10px 0!important;

        @media screen and (min-width: 992px) {
            margin: 10px !important;
        }

    }

    .right-block {
        margin: 5px !important;
    }

    .hour-block {

        div.navbar-right{
            margin-right: 15px !important;
        }

    }

    .phone-block {

        div.navbar-right{
            margin-right: 15px !important;

            @media screen and (min-width: 690px) {
                margin-left: 15px;
                margin-top: 5px;
            }

        }

    }

    .add-addtional {
        bottom: -20px;
    }

}
.ssb-section-type-top-bar{
    .inner-page{
        padding: 0;
    }
}
.top-bar-wrap .main-block {
    .left-block {
        border: 4px solid rgba(0, 0, 0, 0);
        position: relative;
    }
    .left-block.edit-mode {
        // padding-top: 10px;
        // padding-bottom: 10px;
    }
    .left-block:hover {

    }
    .social-list-icons {
        float:left;
        position:relative;
        min-width: 125px;
        min-height: 50px;
        &:hover {

            .left-block {
                border: 3px dashed rgba(0, 0, 0, 0.4);
                padding-right: 28px;
                +.add-addtional {
                    display: block;
                    font-size: 25px;
                    display: block;
                    width: 36px;
                    height: 36px;
                    padding: 5px !important;
                    right: 2px !important;
                }
            }
        }

    }

}
.ssb-wrap-fixed-right-nav {
    [top-bar-component]{
        .container {
            @media screen and (min-width: 1200px){
                 width: 100%;
            }
            @media screen and (min-width: 992px){
                 width: 100%;
            }
            @media screen and (min-width: 768px){
                width: 100%;
            }
        }
    }
}

